updated fixes for lightmode on mobile

--- a/src/app/maps/[id]/Mobile/DrawerPanel/styles.module.css
+++ b/src/app/maps/[id]/Mobile/DrawerPanel/styles.module.css
@@ -24,7 +24,7 @@ width: 100%;
 height: 100%;
 transform: translateY(100%);
 transition: transform .125s;
-background:black;
+background:var(--screen-bg);
 border-top: 1px solid;
 border-radius: var(--border-radius);
 box-shadow: 0px -3px 0 black;
